# fastapi-demo

./: .gitignore  Dockerfile  README.md  db.py  demo.py  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2f8180f20544_first_migration.py
fastapi_demo/: api.py  models.py  schema.py
